# tollgate-rs

./: .gitignore  Cargo.toml  VETC_BE_QTTH_FN_V1.14-Final (1)-n9n1arcrtpybikppmret8gw57h 2 1 3.txt
backend/: .env  Cargo.toml  sql_querry.sql
backend/src/: main.rs
backend/src/api/: mod.rs  routes.rs  socket_server.rs
backend/src/domain/: handshake.rs  mod.rs  transaction.rs
backend/src/infrastructure/: db_context.rs  mod.rs  tcoc.rs
lane-sim/: package-lock.json  package.json
lane-sim/src-tauri/: Cargo.toml  tauri.conf.json
lane-sim/src-tauri/src/: main.rs
tollgate-fe/: Cargo.toml
tollgate-fe/src/: main.rs
tollgate-fe/src/api/: handshake_service.rs  mod.rs  routes.rs  tcoc.rs  transaction_service.rs
tollgate-fe/src/ui/: commands.rs  mod.rs
